[GEOS-10027] CoverageReaderFileConverter fails to convert valid input file path or url (#4986)
* [GEOS-10027] CoverageReaderFileConverter fails to convert valid input file path or url

* review feedback